--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-awesome-paginate": "^1.1.46",
     "vue-router": "^4.2.5",
     "vuetify": "^3.5.2",
     "vuex": "^4.0.2"
